[package]
name = "fvm_ipld_bitfield"
description = "Bitfield logic for use in Filecoin actors"
version = "0.7.2"
license.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
repository.workspace = true

[dependencies]
unsigned-varint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
arbitrary = { workspace = true, optional = true}
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
rand_xorshift = "0.3.0"
gperftools = "0.2.0"

[features]
json = []
enable-arbitrary = ["arbitrary"]

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
