[package]
name = "ipld_blockstore"
description = "IPLD storage interface"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
cid = { version = "0.7" }
encoding = { package = "forest_encoding", version = "0.2.1" }
forest_ipld = { optional = true, version = "0.1" }
byteorder = "1.3.2"
dashmap = "5.0.0"
blockstore = { path = "../../lib/blockstore" }
fvm_sdk = { path = "../../sdk", optional = true }

[dev-dependencies]
fvm_shared = { path = "../../shared" }

[features]
tracking = []
resolve = ["forest_ipld"]