[package]
name = "fvm_ipld_blockstore"
description = "Sharded IPLD Blockstore."
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2018"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
cid = { version = "0.8.2", default-features = false, features = ["serde-codec", "std"] }


[dev-dependencies]
multihash = { version = "0.16.1", default-features = false, features = ["blake2b", "multihash-impl"] }

[features]
default = []
