[package]
name = "fvm_ipld_blockstore"
description = "Sharded IPLD Blockstore."
version = "0.3.1"
license.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
repository.workspace = true

[dependencies]
cid = { workspace = true, features = ["serde-codec", "std"] }
anyhow = { workspace = true }
multihash-codetable = { workspace = true }

[features]
default = []
