[package]
name = "fvm_ipld_car"
description = "IPLD CAR handling library"
version = "0.7.1"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
cid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
