[package]
name = "fvm_ipld_car"
description = "IPLD CAR handling library"
version = "0.9.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
cid = { workspace = true }
multihash-codetable = { workspace = true }
multihash-derive = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
unsigned-varint = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
multihash-codetable = { workspace = true, features = ["sha2"] }
