[package]
name = "fvm_ipld_encoding"
description = "Sharded IPLD encoding."
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2018"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
# TODO remove fork in future (allowing non utf8 strings to be cbor deserialized)
serde_ipld_dagcbor = "0.1.2"
serde_tuple = "0.5"
serde_repr = "0.1"
cid = { version = "0.8.2", default-features = false, features = ["serde-codec", "std"] }
thiserror = "1.0.30"
fvm_ipld_blockstore = { version = "0.1", path = "../blockstore" }

[features]
default = []

[dev-dependencies]
serde_json = "1.0.79"
