[package]
name = "fvm_ipld_encoding"
description = "Sharded IPLD encoding."
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
serde = { workspace = true }
serde_tuple = { workspace = true }
cid = { workspace = true, features = ["serde-codec", "std"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
# multihash is also re-exported by `cid`. Having `multihash` here as a
# depdendency is needed to enable the features of the re-export.
multihash = { workspace = true, features = ["blake2b", "multihash-impl"] }
serde_ipld_dagcbor = "0.6.1"
serde_repr = "0.1"

[features]
default = []

[dev-dependencies]
serde_json = { workspace = true }
