[package]
name = "fvm_ipld_encoding"
description = "Sharded IPLD encoding."
version = "0.5.3"
license.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
cid = { workspace = true, features = ["serde", "std"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
multihash-codetable = { workspace = true, features = ["blake2b"] }
serde_ipld_dagcbor = "0.6.3"
serde_repr = "0.1"
serde_tuple = "0.5.0"

[features]
default = []

[dev-dependencies]
serde_json = { workspace = true }
