[package]
name = "fvm_ipld_hamt"
description = "Sharded IPLD HashMap implementation."
version = "0.9.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
serde = { workspace = true }
byteorder = { workspace = true }
cid = { workspace = true, features = ["serde-codec"] }
multihash = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
sha2 = "0.10"
forest_hash_utils = "0.1"
libipld-core = { workspace = true }


[features]
identity = []

[dev-dependencies]
hex =  { workspace = true }
criterion = { workspace = true }
unsigned-varint = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "hamt_beckmark"
path = "benches/hamt_benchmark.rs"
harness = false
