[package]
name = "fvm_ipld_hamt"
description = "Sharded IPLD HashMap implementation."
version = "0.10.4"
license.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
byteorder = { workspace = true }
cid = { workspace = true, features = ["serde"] }
multihash-codetable = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
sha2 = "0.10"
forest_hash_utils = "0.1"
ipld-core = { workspace = true }


[features]
identity = []

[dev-dependencies]
hex =  { workspace = true }
criterion = { workspace = true }
unsigned-varint = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }

[[bench]]
name = "hamt_beckmark"
path = "benches/hamt_benchmark.rs"
harness = false
