[package]
name = "fvm_ipld_kamt"
description = "Sharded IPLD Map implementation with level skipping."
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4.3"
cid = { workspace = true, features = ["serde-codec"] }
multihash = { workspace = true }
thiserror = "1.0"
once_cell = "1.18"
forest_hash_utils = { version = "0.1", path = "../forest_hash_utils" }
anyhow = "1.0.71"
fvm_ipld_encoding = { version = "0.4", path = "../encoding" }
fvm_ipld_blockstore = { version = "0.2", path = "../blockstore" }

[features]
# This feature should just be used for testing (ignoring links that don't exist in store)
ignore-dead-links = []

[dev-dependencies]
hex = "0.4.3"
criterion = "0.5.1"
unsigned-varint = "0.7"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"

[[bench]]
name = "kamt_benchmark"
path = "benches/kamt_benchmark.rs"
harness = false
