[package]
name = "fvm_ipld_kamt"
description = "Sharded IPLD Map implementation with level skipping."
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
serde = { workspace = true }
byteorder = { workspace = true }
cid = { workspace = true, features = ["serde-codec"] }
multihash = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
forest_hash_utils = "0.1"

[dev-dependencies]
hex = { workspace = true }
criterion = { workspace = true }
unsigned-varint = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "kamt_benchmark"
path = "benches/kamt_benchmark.rs"
harness = false
