[package]
name = "fvm_ipld_kamt"
description = "Sharded IPLD Map implementation with level skipping."
version = "0.4.5"
license.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
byteorder = { workspace = true }
cid = { workspace = true, features = ["serde"] }
multihash-codetable = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
criterion = { workspace = true }
unsigned-varint = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "kamt_benchmark"
path = "benches/kamt_benchmark.rs"
harness = false
