[package]
name = "fvm_conformance_tests"
description = "Filecoin Virtual Machine conformance tests"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
exclude = ["/test-vectors"]
publish = false
license.workspace = true
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
fvm = { workspace = true, default-features = false, features = ["testing"] }
fvm_shared = { workspace = true }
fvm_ipld_car = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

anyhow = { workspace = true }
num-traits = { workspace = true }
cid = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
ipld-core = { workspace = true }
async-std = { version = "1.13", features = ["attributes"] }
wasmtime = { workspace = true }
base64 = "0.22.1"
flate2 = { version = "1.1" }
colored = "3"
either = "1.15.0"
walkdir = "2.5"
regex = { version = "1.11" }
ittapi-rs = { version = "0.3.0", optional = true }
tar = { version = "0.4.44", default-features = false }
zstd = { version = "0.13.3", default-features = false }

[features]
vtune = ["wasmtime/profiling", "ittapi-rs"]
m2-native = []

[dev-dependencies]
env_logger = "0.11.8"
criterion = { workspace = true, features = ["async_std"] }

[[bin]]
name = "perf-conformance"
test = false
bench = false
required-features = ["vtune"]

[[bin]]
name = "least-squares"
test = false
bench = false

[[bench]]
name = "bench_conformance"
harness = false

[[bench]]
name = "bench_conformance_overhead"
harness = false
