[package]
name = "fvm_conformance_tests"
description = "Filecoin Virtual Machine conformance tests"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
exclude = ["/test-vectors"]
publish = false
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
fvm = { workspace = true, features = ["testing"] }
fvm_shared = { workspace = true }
fvm_ipld_car = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

anyhow = "1.0.97"
num-traits = "0.2"
cid = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.27"
wasmtime = { workspace = true }
base64 = "0.22.1"
flate2 = { version = "1.1" }
colored = "3"
either = "1.15.0"
itertools = "0.14.0"
num_cpus = "1.16.0"
serde_json = { version = "1.0", features = ["raw_value"] }
walkdir = "2.5"
regex = { version = "1.11" }
ittapi-rs = { version = "0.3.0", optional = true }
ipld-core = { workspace = true }
tar = { version = "0.4.44", default-features = false }
zstd = { version = "0.13.3", default-features = false }

[features]
vtune = ["wasmtime/profiling", "ittapi-rs"]
m2-native = []

[dev-dependencies]
env_logger = "0.11.8"
criterion = { version = "0.5" }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.31"

[[bin]]
name = "perf-conformance"
test = false
bench = false
required-features = ["vtune"]

[[bin]]
name = "least-squares"
test = false
bench = false

[[bench]]
name = "bench_conformance"
harness = false

[[bench]]
name = "bench_conformance_overhead"
harness = false
