[package]
name = "fvm_integration_tests"
description = "Filecoin Virtual Machine integration tests framework"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs", "Polyphene"]

[dependencies]
fvm = { workspace = true, default-features = false, features = ["testing", "upgrade-actor"] }
fvm_shared = { workspace = true, features = ["testing"] }
fvm_ipld_car = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

anyhow = { workspace = true }
cid = { workspace = true }
futures = { workspace = true }
multihash = { workspace = true }
num-traits = { workspace = true }
lazy_static = { workspace = true }
libsecp256k1 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
thiserror = { workspace = true }
wasmtime = { workspace = true, default-features = false, features = ["cranelift", "parallel-compilation"] }

[dev-dependencies]
actors-v12 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "master" }
fvm_test_actors = { path = "../test_actors" }
fvm_gas_calibration_shared = { path = "../calibration/shared" }
blake2b_simd = { workspace = true }
serde_json = { workspace = true }
bls-signatures = { workspace = true }
hex = { workspace = true }
minstant =  { workspace = true }
wat = "1.0.66"

[features]
default = []
m2-native = []
calibration = ["fvm/gas_calibration"]
